[package]
name = "delver_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
ron = "0.8.1"
serde = { version ="1.0.210", features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
serde_json = "1.0.133"
chronobase = { path = "../chronobase" }
itertools = "0.14.0"
colored = "3.0.0"
