[package]
name = "discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.6.1"
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
delver_sim = { path = "../delver_sim" }
chronobase = { path = "../chronobase" }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
dotenv = "0.15.0"
