[package]
name = "game_runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delver_sim = { path = "../delver_sim" }
chronobase = { path = "../chronobase" }
rand = "0.8.5"
rand_chacha = "0.3.1"
serde_json = "1.0.133"
uuid = "1.11.0"

rocket = { version = "0.5.1", features = ["json"], optional = true  }
tokio = "1.42.0"

[features]
delverbaseserver = ["rocket", "chronobase/webserver"]

[[bin]]
name = "webserver"
required-features = ["delverbaseserver"]
